--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
-#contenedor{
+#conteneR{
 	height: 1050px;
 	width: 780px;	
+}
+
+.jumbotron {
+	width: 100%;
+	height: 500px;
 }
 
 header, #Home, #About, #contacto{
@@ -13,7 +18,7 @@ h1{
 	color: black;
 	
 }
-h2{
+.jumbotron h2{
 	font: 50px solid xx-large  ;
 	color: hsl(0, 100%, 41%);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -36,6 +41,48 @@ p.lead{
 	font: 40px solid xx-large  ;
 	color: hsl(0, 100%, 41%);
 	text-align: end;
+	
+}
+
+
+ @media  ( max-width: 700px) { 
+	.jumbotron {
+		width: 100%;
+		height: 300px;
+	}
+	h1{
+		
+	    
+		color: white;
+		
+		align-items: flex-start;
+		
+	}
+	.jumbotron .zap{
+		font: 20px solid;
+		font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+			
+		color: blue;
+		
+		}
+		
+		.zap img{
+		width: 40px;	
+		border-radius: 50%;
+		}
+		p.lead{
+			font: 15px solid xx-large  ;
+			color: hsl(0, 100%, 41%);
+			text-align: end;
+		}
+		.jumbotron h2{
+			font: 25px solid xx-large  ;
+			color: hsl(0, 100%, 41%);
+			font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+			
+		
+		}
+	
 	
 }
 
