--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,12 @@ p.lead{
 }
 
 
- @media  ( max-width: 500px) { 
+ @media  ( max-width: 700px) { 
 	.jumbotron {
 		width: 100%;
 		height: 300px;
+		padding-bottom: 50px;
+
 	}
 	h1{
 		
